--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE HTML>
-<meta charset="utf-8" />
+<!DOCTYPE html> 
 <html>
-
-<head>
-
+    
+    <head>
+        <meta charset="UTF-8" />
+        
     <title>Fluffy Calculator</title>
     <link rel="icon" href="fluffy.png">
 
