--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
         </div>
         <div class="tab-pane" id="daily" role="tabpanel" aria-labelledby="daily-tab">
-            <iframe src="old\fluffycalculator.github.io - Copy\daily.html" style="width:100%; height:100%; position:absolute"  frameborder="0"></iframe>
+            <iframe src="old\daily.html" style="width:100%; height:100%; position:absolute"  frameborder="0"></iframe>
         </div>
     </div>
 
