how to hide commits

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                 <span>Heirloom Bonus</span>
                             </label>
                             <label>
-                                <input id="SpiresInARun" type="number" title="Spires that you always get C50 Bonus On (bonus is spire 3+), seperate with commas and use numbers" class="input-shadow form-control" oninput="update.vars(this.id,this.value)" placeholder=" ">
+                                <input id="SpiresInARun" type="text" title="Spires that you always get C50 Bonus On (bonus is spire 3+), seperate with commas and use numbers" class="input-shadow form-control" oninput="update.vars(this.id,this.value)" placeholder=" ">
                                 <span>List of Spire Clears</span>
                             </label>
                             <label>
