--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 <script src="bootstrap.min.js"></script>
 <script src="lz-string.js"></script>
-<!-- <script src="testsave.js"></script> -->
+<script src="testsave.js"></script>
 <script src="trimps.js"></script>
 <script src="fluffy.js"></script>
 
@@ -147,8 +147,8 @@
         });
         
         getLocalStorage()
-        // update.fill()
-        // update.table()
+        update.fill()
+        update.table()
     });
 </script>
 
