--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <script src="bootstrap.min.js"></script>
 <script src="lz-string.js"></script>
 <script src="testsave.js"></script>
-<script src="trimps.js"></script>
+<!-- <script src="trimps.js"></script> -->
 <script src="fluffy.js"></script>
 
 <script>
@@ -147,8 +147,8 @@
         });
         
         getLocalStorage()
-        update.fill()
-        update.table()
+        // update.fill()
+        // update.table()
     });
 </script>
 
