--- a/old/index.html
+++ b/old/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE HTML>
-<meta charset="utf-8" />
 <html>
 
 <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fluffy Calculator</title>
   <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet" id="darktheme" href="dark.css" disabled />
