--- a/old/daily.html
+++ b/old/daily.html
@@ -1,12 +1,14 @@
 <!DOCTYPE HTML>
-<meta charset="utf-8" />
 <html>
+    <meta charset="utf-8" />
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1"> -->
 
 <head>
   <title>Daily Seeker</title>
   <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css">
+
   <link href="https://fonts.googleapis.com/css?family=Dokdo&display=swap" rel="stylesheet">
   <link rel="icon" href="daily.png">
 
