--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div style="position: fixed; width: 100%; text-align: center">
-        <!-- <a href="old\index.html" style="text-align:center; position:fixed; padding: 0.5rem 1rem;">Old Site</a> -->
+        <a href="old\index.html" style="text-align:center; position:fixed; padding: 0.5rem 1rem;">Old Site</a>
     </div>
 
     <ul class="nav nav-tabs" id="myTab" role="tablist">
