--- a/old/index.html
+++ b/old/index.html
@@ -2,8 +2,8 @@
 <html>
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Fluffy Calculator</title>
   <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet" id="darktheme" href="dark.css" disabled />
@@ -29,7 +29,8 @@
 
     <div id="tipTitle">
       <span title="made by bhad">
-        <span style="font-family: 'Dokdo', cursive;"><a href="daily">🐸 </a>F<span class="noselect astext" onclick="stealth()">l</span>uffy Calculator<a href="daily"> 🤛</a></span>
+        <span style="font-family: 'Dokdo', cursive;"><a href="daily">🐸 </a>F<span class="noselect astext"
+            onclick="stealth()">l</span>uffy Calculator<a href="daily"> 🤛</a></span>
       </span>
     </div>
     <hr>
@@ -53,7 +54,8 @@
       <div class="row">
         <div class="col-md-3" style="min-width:21em;max-width: 30em;">
           <br />
-          <textarea placeholder="Import your save" id="Save" onpaste="handle_paste(event)" type="text" style="width: 298px;" onclick="this.select()"></textarea>
+          <textarea placeholder="Import your save" id="Save" onpaste="handle_paste(event)" type="text"
+            style="width: 298px;" onclick="this.select()"></textarea>
           <!-- beautify ignore:start -->
           <table id="leftTable">
             <tr id="showCapable" style="display: none;"><td>Capable Level</td><td><input id="capable" type="number" max="10" oninput="changeVars(this.id,this.value)" /></td></tr>
@@ -136,7 +138,7 @@
 <script src="trimps.js?v=8"></script>
 <script src="main.js?v=8"></script>
 <script>
-  $('input').keypress(function(e) {
+  $('input').keypress(function (e) {
     if (e.which == 13) {
       $('#calButton').click();
       return false; //<---- Add this line
