--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
 	<!-- <link rel="stylesheet" href="bootstrap.css"> -->
 	<!-- <link rel="stylesheet" id="light"href="css/main.css"> -->
-	<link rel="stylesheet" id="theme" href="css/light.css">
+	<link rel="stylesheet" id="light" href="css/light.css">
+	<link rel="stylesheet" id="dark" href="css/dark.css" disabled>
 
 
 </head>
