--- a/index.html
+++ b/index.html
@@ -174,6 +174,14 @@
 						</div>
 					</div>
 				</div>
+				<hr>
+				<div class="row">
+					<div class="col-12" style="text-align: center;">
+							<table class="table table-bordered table-hover" id="zoneTable" style="display:none; width:fit-content;">
+						
+						</table>
+					</div>
+				</div>
 			</div>
 		</div>
 		<div class="tab-pane" id="daily" role="tabpanel" aria-labelledby="daily-tab">
