moving code around

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 									oninput="update.vars(this.id,this.value)" placeholder=" ">
 								<span>Knowledge Towers</span>
 							</label>
-							<label  style="display:none">
+							<label style="display:none">
 								<input id="KnowledgeLevel" type="number" class="input-shadow form-control"
 									oninput="update.vars(this.id,this.value)" placeholder=" ">
 								<span>Knowledge Level</span>
@@ -128,7 +128,7 @@
 							</tbody>
 						</table>
 					</div>
-					<div class="col-2" style="min-width: 9.8em">
+					<div class="col-2" style="min-width: 10.9em">
 						<div style="position: relative; text-align:center">
 							<h7 id="statsHeader" style="font-size: 90%">Varied Stats</h7>
 							<hr style="margin-top: 12%;position:relative; width: 100%;">
@@ -151,10 +151,11 @@
 								<input id="BonesToLevel" class="input-shadow form-control" placeholder=" " disabled>
 								<span>Bones To Level</span>
 							</label>
-							<label>
-								<input id="HeliumSpentFluffy" class="input-shadow form-control" placeholder=" "
-									disabled>
-								<span>Helium On Fluffy</span>
+							<label style="width:100%">
+								<div id="HeliumSpentFluffy" class="progress" title="Other Perks" placeholder=" ">
+
+								</div>
+								<span id="HeliumOnFluffy">Helium On Fluffy</span>
 							</label>
 							<label style="display:none;">
 								<input id="FluffyXPHr" class="input-shadow form-control" placeholder=" " disabled>
