--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 		if (window.location.origin == "http://127.0.0.1:5500" || window.location.origin ==
 			"http://192.168.1.69:5500" || window.location.origin ==
 			"http://localhost:5500") {
-			document.getElementById("testenv").setAttribute("src", "js/testsave.js")
+			document.getElementById("testenv").setAttribute("src", "test/testsave1.js")
 			setTimeout(function () {
 				update.fill()
 				update.table();
