--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<ul class="nav nav-tabs" id="myTab" role="tablist">
 		<li class="nav-item">
 			<a class="nav-link" id="fluffy-tab" style="margin-left:-1px" data-toggle="tab" href="#fluffy" role="tab"
-				aria-controls="home" aria-selected="false">Fluffy Calculator</a>
+				aria-controls="home" aria-selected="false">Fluffy Poop Calculator</a>
 		</li>
 		<li class="nav-item">
 			<a class="nav-link" id="daily-tab" data-toggle="tab" href="#daily" role="tab" aria-controls="profile"
